--- a/broccoli/BroccoliMvc/Content/support/support.html
+++ b/broccoli/BroccoliMvc/Content/support/support.html
@@ -13,8 +13,8 @@
                 <param name="movie" value="support.swf" />
                 <param name="quality" value="high" />
                 <param name="bgcolor" value="#FFFFFF" />
-                <param name="flashvars" value="group_id=1002&language=ru&style_head=logo.png&style_head_x=15&style_head_y=10&url=http://teamwox.forexinn.ru" />
-                <embed src="support.swf" flashvars="group_id=1002&language=ru&style_head=logo.png&style_head_x=15&style_head_y=10&url=http://teamwox.forexinn.ru" width="100%"
+                <param name="flashvars" value="filter=broccoli&language=ru&style_head=logo.png&style_head_x=15&style_head_y=10&url=http://teamwox.forexinn.ru" />
+                <embed src="support.swf" flashvars="filter=broccoli&language=ru&style_head=logo.png&style_head_x=15&style_head_y=10&url=http://teamwox.forexinn.ru" width="100%"
                     height="100%" quality="high" bgcolor="#FFFFFF" name="main" align="middle"
                     allowScriptAccess="sameDomain" allowFullScreen="false" type="application/x-shockwave-flash"
                     pluginspage="http://www.macromedia.com/go/getflashplayer" />
